applications/monitoring/ingress-alertmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
spec:
  rules:
  - host: alertmanager.microk8s.local
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
